test/conformance/chainsaw/reports/background/verify-image-fail/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: ghcr.io/kyverno/test-verify-image:unsigned
    name: test-secret
---
apiVersion: v1
kind: Pod
metadata:
  name: signed-by-someone-else
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: ghcr.io/kyverno/test-verify-image:signed-by-someone-else
    name: test-secret
