test/conformance/chainsaw/reports/background/verify-image-fail/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: keyed-basic-policy
spec:
  background: true
  webhookTimeoutSeconds: 30
  rules:
  - name: keyed-basic-rule
    match:
      any:
      - resources:
          kinds:
          - Pod
    verifyImages:
    - failureAction: Audit
      imageReferences:
      - ghcr.io/kyverno/test-verify-image:*
      verifyDigest: false
      mutateDigest: false
      required: false
      attestors:
      - entries:
        - keys:
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
              -----END PUBLIC KEY-----
            rekor:
              url: https://rekor.sigstore.dev
              ignoreTlog: true
            ctlog:
              ignoreSCT: true
