test/conformance/chainsaw/reports/background/verify-image-fail/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned
---
apiVersion: v1
kind: Pod
metadata:
  name: signed-by-someone-else
